Fix Dashboard auth check

--- a/flaskr/templates/dashboard/index.html
+++ b/flaskr/templates/dashboard/index.html
@@ -45,8 +45,12 @@
                             <a class="navbar-item" href="#">
                                 Edit
                             </a>
-                            <a class="navbar-item" href="">
+                            <a class="navbar-item" href="#">
                                 Settings
+                            </a>
+                            
+                            <a class="navbar-item" href="/auth/logout">
+                                Logout
                             </a>
                         </div>
                     </div>
