--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -48,8 +48,8 @@
                 <div class="field">
                     <label class="label">Password</label>
                     <div class="control">
-                        <input class="input" type="password" placeholder="********" id="password"
-                            name="password" required/>
+                        <input class="input" type="password" placeholder="********" id="password" name="password"
+                            required />
                     </div>
                 </div>
                 <button class="button is-primary">Sign in</button>
@@ -57,4 +57,28 @@
         </div>
     </section>
 </body>
+<footer>
+    <script>document.addEventListener('DOMContentLoaded', () => {
+
+            // Get all "navbar-burger" elements
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+            // Add a click event on each of them
+            $navbarBurgers.forEach(el => {
+                el.addEventListener('click', () => {
+
+                    // Get the target from the "data-target" attribute
+                    const target = el.dataset.target;
+                    const $target = document.getElementById(target);
+
+                    // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                    el.classList.toggle('is-active');
+                    $target.classList.toggle('is-active');
+
+                });
+            });
+
+        });</script>
+</footer>
+
 </html>
