--- a/web/templates/clients/client_list.html
+++ b/web/templates/clients/client_list.html
@@ -78,9 +78,10 @@
                         <td>{{ client.onrc_no }}</td>
                         <td>
                             <div class="buttons">
+                                <a class="button is-link is-small is-rounded" href="/clients/{{ client.id }}/contracts">Contracts</a>
                                 <a class="button is-info is-small is-rounded" href="/clients/{{ client.id }}/view">View</a>
                                 <a class="button is-warning is-small is-rounded" href="/clients/{{ client.id }}/edit">Edit</a>
-                                <a class="button is-danger is-small is-rounded" href="/clients/{{ client.id }}/delete">Delete</a>
+                                <a class="button is-danger is-small is-rounded" href="#">Delete</a>
                             </div>
                         </td>
                     </tr>
