Edded list,add, and edit Work Orders

--- a/web/templates/work_orders/list.html
+++ b/web/templates/work_orders/list.html
@@ -54,37 +54,38 @@
             <nav class="breadcrumb" aria-label="breadcrumbs">
                 <ul>
                     <li><a href="/clients" aria-current="page">Clients</a></li>
-                    <li class="is-active"><a href="/clients/2/contracts" aria-current="page">Contracts</a></li>
+                    <!-- TODO: Add client ID dynamically -->
+                    <li><a href="/clients/2/contracts" aria-current="page">Contracts</a></li>
+                    <li class="is-active"><a href="#" aria-current="page">Work Orders</a></li>
                 </ul>
             </nav>
             <hr>
             <div class="buttons is-right">
-                <a class="button is-primary" href="/clients/{{ client_id }}/contracts/add">Add</a>
+                <a class="button is-primary" href="/clients/{{ client_id }}/contracts/{{ contract_id }}/wo/add">Add</a>
             </div>
             <table class="table is-hoverable is-fullwidth">
                 <thead>
                     <tr>
-                        <th>Contract No.</th>
-                        <th>Description</th>
-                        <th>Cloud Storage URL</th>
+                        <th>Name</th>
+                        <th>Final Client</th>
+                        <th>End Date</th>
+                        <th>Status</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for contract in contract_list %}
+                    {% for wo in wo_list %}
                     <tr>
-                        <th>{{ contract.contract_no }}</th>
+                        <th>{{ wo.name }}</th>
 
-                        <td>{{ contract.description }}</td>
-                        <td>
-                            <a class="button is-link is-small is-rounded"
-                                href="{{ contract.cloud_storage_url }}" target="_blank">One Drive</a>
-                        </td>
+                        <td>{{ wo.final_client }}</td>
+                        <td>{{ wo.end_date }}</td>
+                        <td>{{ wo.status }}</td>
                         <td>
                             <div class="buttons">
-                                <a class="button is-link is-small is-rounded" href="/clients/{{ contract.client_id }}/contracts/{{ contract.id }}/wo">Work Orders</a>
-                                <a class="button is-info is-small is-rounded" href="/clients/{{ contract.client_id }}/contracts/{{ contract.id }}/view">View</a>
-                                <a class="button is-warning is-small is-rounded" href="/clients/{{ contract.client_id }}/contracts/{{ contract.id }}/edit">Edit</a>
+                                <a class="button is-link is-small is-rounded" href="#">Activity Reports</a>
+                                <a class="button is-info is-small is-rounded" href="#">View</a>
+                                <a class="button is-warning is-small is-rounded" href="/clients/{{ client_id }}/contracts/{{ wo.contract_id }}/wo/{{ wo.id }}/edit">Edit</a>
                                 <a class="button is-danger is-small is-rounded" href="#">Delete</a>
                             </div>
                         </td>
