--- a/web/templates/activity_reports/list.html
+++ b/web/templates/activity_reports/list.html
@@ -56,37 +56,33 @@
                     <li><a href="/clients" aria-current="page">Clients</a></li>
                     <!-- TODO: Add client ID dynamically -->
                     <li><a href="/clients/2/contracts" aria-current="page">Contracts</a></li>
-                    <li class="is-active"><a href="#" aria-current="page">Work Orders</a></li>
+                    <li><a href="/clients/2/contracts/1/wo" aria-current="page">Work Orders</a></li>
+                    <li class="is-active"><a href="#" aria-current="page">Activity Reports</a></li>
                 </ul>
             </nav>
             <hr>
             <div class="buttons is-right">
-                <a class="button is-primary" href="/clients/{{ client_id }}/contracts/{{ contract_id }}/wo/add">Add</a>
+                <a class="button is-primary" href="ar/add">Add</a>
             </div>
             <table class="table is-hoverable is-fullwidth">
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Final Client</th>
-                        <th>End Date</th>
-                        <th>Status</th>
-                        <th>Actions</th>
+                        <th>Date</th>
+                        <th>Hours</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for wo in wo_list %}
+                    {% for ar in ar_list %}
                     <tr>
-                        <th>{{ wo.name }}</th>
+                        <th>{{ ar.name }}</th>
 
-                        <td>{{ wo.final_client }}</td>
-                        <td>{{ wo.end_date }}</td>
-                        <td>{{ wo.status }}</td>
+                        <td>{{ ar.date }}</td>
+                        <td>{{ ar.hours }}</td>
                         <td>
                             <div class="buttons">
                                 <!-- TODO: Use the following style for relative links instead of ones starting with /clients -->
-                                <a class="button is-link is-small is-rounded" href="wo/{{ wo.id }}/ar">Activity Reports</a>
-                                <a class="button is-info is-small is-rounded" href="wo/{{ wo.id }}/view">View</a>
-                                <a class="button is-warning is-small is-rounded" href="wo/{{ wo.id }}/edit">Edit</a>
+                                <a class="button is-warning is-small is-rounded" href="ar/{{ ar.id }}/edit">Edit</a>
                                 <a class="button is-danger is-small is-rounded" href="#">Delete</a>
                             </div>
                         </td>
