Implemented new invoice and invoice list

--- a/web/templates/dashboard/index.html
+++ b/web/templates/dashboard/index.html
@@ -30,7 +30,7 @@
                         Clients
                     </a>
 
-                    <a class="navbar-item" href="#">
+                    <a class="navbar-item" href="/invoices">
                         Invoices
                     </a>
                 </div>
