Prepared invoice items

--- a/web/templates/activity_reports/list.html
+++ b/web/templates/activity_reports/list.html
@@ -78,7 +78,7 @@
                         <th>{{ ar.name }}</th>
 
                         <td>{{ ar.date }}</td>
-                        <td>{{ ar.hours }}</td>
+                        <td>{{ ar.hours_amount }}</td>
                         <td>
                             <div class="buttons">
                                 <!-- TODO: Use the following style for relative links instead of ones starting with /clients -->
