--- a/web/templates/invoices/list.html
+++ b/web/templates/invoices/list.html
@@ -74,9 +74,9 @@
                         <td>
                             <div class="buttons">
                                 <!-- TODO: the items will be a checkbox form on the add items page -->
-                                <a class="button is-link is-small is-rounded" href="#">Add Items</a>
                                 <a class="button is-info is-small is-rounded" href="#">View</a>
-                                {% if invoice.status == "Draft" %}
+                                {% if invoice.status != "Draft" %} <!-- TODO: Change this to == after development is done -->
+                                <a class="button is-link is-small is-rounded" href="{{ invoice.id}}/items">Add Items</a>
                                 <a class="button is-warning is-small is-rounded" href="#">Edit</a>
                                 <a class="button is-danger is-small is-rounded" href="#">Delete</a>
                                 {% endif %}
