--- a/web/templates/invoices/edit.html
+++ b/web/templates/invoices/edit.html
@@ -4,7 +4,7 @@
     <section class="section">
         <nav>
             <ul>
-                <li><a class="button is-primary is-outlined" href="/clients">Back</a></li>
+                <li><a class="button is-primary is-outlined" href="/invoices">Back</a></li>
             </ul>
         </nav>
         <hr>
@@ -26,57 +26,99 @@
                 Error: {{ error }}
             </div>
             {% endif %}
-            {% if client_details %}
-            <form action="/clients/{{ client_details.id }}/edit" method="post" class="box">
+
+            {% if invoice %}
+            <form action="/invoices/{{ invoice_id }}/edit" method="post" class="box">
+
                 <div class="field">
                     <label class="label" for="name">Name *</label>
                     <div class="control">
-                        <input class="input" type="text" placeholder="Microsoft" id="name" name="name" value="{{ client_details.name }}" required>
+                        <input class="input" type="text" id="name" name="name" value="{{ invoice.name }}" required>
                     </div>
                 </div>
                 <div class="field">
-                    <label class="label" for="address">Address *</label>
+                    <label class="label">Currency *</label>
                     <div class="control">
-                        <input class="input" type="text" placeholder="15010 NE 36th Street, Redmond, WA 98052, USA" id="address" name="address" value="{{ client_details.address }}" required>
+                        <div class="select">
+                            <select id="currency" name="currency">
+                                {% if invoice.currency == "Euro" %}
+                                <option selected="selected">Euro</option>
+                                {% else %}
+                                <option>Euro</option>
+                                {% endif %}
+                                {% if invoice.currency == "Lei" %}
+                                <option selected="selected">Lei</option>
+                                {% else %}
+                                <option>Lei</option>
+                                {% endif %}
+                                {% if invoice.currency == "USD" %}
+                                <option selected="selected">USD</option>
+                                {% else %}
+                                <option>USD</option>
+                                {% endif %}
+                            </select>
+                        </div>
                     </div>
                 </div>
 
                 <div class="field">
-                    <label class="label">Contact Person *</label>
+                    <label class="label">Exchange Rate *</label>
                     <div class="control">
-                        <input class="input" type="email" placeholder="john.doe@example.com" id="contact_person"
-                        name="contact_person" value="{{ client_details.contact_person }}" required>
+                        <input class="input" type="number" step="0.0001" id="exchange_rate"
+                            name="exchange_rate" value="{{ invoice.exchange_rate }}" required>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label" for="invoice_date">Invoice Date *</label>
+                    <div class="control">
+                        <input class="input" type="date" id="invoice_date" name="invoice_date" value="{{ invoice.invoice_date }}" required>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label" for="due_date">Due Date *</label>
+                    <div class="control">
+                        <input class="input" type="date" id="due_date" name="due_date" value="{{ invoice.due_date }}" required>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Status *</label>
+                    <div class="control">
+                        <div class="select" >
+                            <select id="status" name="status">
+                                {% if invoice.status == "Draft" %}
+                                <option selected="selected">Draft</option>
+                                {% else %}
+                                <option>Draft</option>
+                                {% endif %}
+                                 {% if invoice.status == "Issued" %}
+                                <option selected="selected">Issued</option>
+                                {% else %}
+                                <option>Issued</option>
+                                {% endif %}
+                                 {% if invoice.status == "Payed" %}
+                                <option selected="selected">Payed</option>
+                                {% else %}
+                                <option>Payed</option>
+                                {% endif %}
+                            </select>
+                        </div>
                     </div>
                 </div>
                 
                 <div class="field">
-                    <label class="label" for="address">Country *</label>
+                    <label class="label">Client *</label>
                     <div class="control">
-                        <input class="input" type="text" placeholder="United States of America" id="country" name="country"  value="{{ client_details.country }}" required>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">Phone Number</label>
-                    <div class="control">
-                        <input class="input" type="tel" placeholder="+40712345678" id="phone_number"
-                            name="phone_number"  value="{{ client_details.phone_number }}">
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">ONRC Registration Number *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="J200100234540C" id="onrc_no" name="onrc_no" value="{{ client_details.onrc_no }}"
-                            required>
-                    </div>
-                </div>
-                
-                <div class="field">
-                    <label class="label">Tax Code (CUI) *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="6859662" id="cui" name="cui"  value="{{ client_details.cui }}"
-                        required>
+                        <div class="select">
+                            <select id="client_id" name="client_id">
+                                {% for client in client_list %}
+                                {% if invoice.client_id == client.id %}
+                                <option value="{{ client.id }}" selected="selected">{{ client.name }}</option>
+                                {% else %}
+                                <option value="{{ client.id }}">{{ client.name }}</option>
+                                {% endif %}
+                                {% endfor %}
+                            </select>
+                        </div>
                     </div>
                 </div>
 
