--- a/web/templates/invoices/list.html
+++ b/web/templates/invoices/list.html
@@ -77,7 +77,7 @@
                                 <a class="button is-info is-small is-rounded" href="#">View</a>
                                 {% if invoice.status != "Draft" %} <!-- TODO: Change this to == after development is done -->
                                 <a class="button is-link is-small is-rounded" href="{{ invoice.id}}/items">Add Items</a>
-                                <a class="button is-warning is-small is-rounded" href="#">Edit</a>
+                                <a class="button is-warning is-small is-rounded" href="{{ invoice.id }}/edit">Edit</a>
                                 <a class="button is-danger is-small is-rounded" href="#">Delete</a>
                                 {% endif %}
                             </div>
